# renderer

./: CMakeLists.txt
include/: input.hpp  shader.hpp  window.hpp
src/: input.cpp  main.cpp  shader.cpp  window.cpp
src/shader/: fragment.fs  vertex.vs
